2_platform/keycloak/kc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kc  # might need to be no more than 6 characters if using deployment ## https://github.com/codecentric/helm-charts/tree/master/charts/keycloak#why-statefulset
  labels:
    app: keycloak
  annotations:
    await: service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
        app.kubernetes.io/name: keycloak
    spec:
      containers:
      - name: keycloak
        image:  docker.io/dsoderlund/keycloak-multitenant:20250605T104230
        ports:
        - containerPort: 8080
        args: ["start-dev", "--spi-email-template-provider=freemarker-plus-mustache", "--spi-email-template-freemarker-plus-mustache-enabled=true", "--spi-theme-cache-themes=false"]
        resources:
          limits:
            cpu: 1000m
            memory: 2Gi
          requests:
            cpu: 250m
            memory: 500Mi
